# polymarket-forecast-lab

./: .env.example  .gitignore  Claude.md  Claude.md.md  LICENSE  README.md  config.yaml  dashboard.bat  links.yaml  pyproject.toml  start.bat
.claude/: launch.json
Claude researches/: Maximizing Synergistic Statistical Power Across Venues in a Multi-Venue Prediction-Market Calibration Lab.md  Phase 14 — Virtual Prediction Economy Design Synthesis for the Polymarket Forecast Lab.md  Prediction-Market Forecasting Edge A Sourced Playbook for a Read-Only Forecast Lab.md  The Polymarket Automated Trading Stack Open-Source Repositories, Tooling, and Practical Assessment (July 2026).md  paper-concept-memo.md  paper-section-1-introduction.md  paper-section-2-related-work.md  paper-section-3-setting-data.md  paper-section-4-methodology.md  paper-section-5-models.md  reading-list.md
data/: categories.yaml  fee_schedule.yaml  markets_map.yaml
docs/: OPERATIONS.md  VPS_OPERATIONS.md  ledger_commitments.jsonl  paper_export_schema.md  pre_analysis_plan.md
scripts/: _debug_run.py  _httpx_stress.py  _psutil_stress.py  install-autostart.bat  install-pmxt-scan-task.ps1  install-watchdog.ps1  pmxt_router_scan.py  publish_results.py  uninstall-pmxt-scan-task.ps1  uninstall-watchdog.ps1  watchdog-task.bat  watchdog.ps1
tests/: test_aggregate.py  test_anytime.py  test_categories.py  test_cluster.py  test_clv.py  test_db.py  test_distributional.py  test_eval_run.py  test_export_and_report.py  test_export_paper.py  test_extract.py  test_fees.py  test_forecast_null_control.py  test_m4.py  (+33 more)
(+71 files in other folders)
