[project]
name = "forecast-lab"
version = "0.1.0"
description = "Polymarket Forecast Lab - a read-only research system measuring whether model probability estimates beat market prices after resolution."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "polars>=1.0",
    "pydantic>=2.7",
    "apscheduler>=3.10",
    "anthropic>=0.34",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "jinja2>=3.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "huggingface-hub>=1.21.0",
    "psutil>=5.9",
]

[project.scripts]
lab = "lab.cli:app"

[dependency-groups]
dashboard = [
    "streamlit>=1.58.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
